syntax = "proto3";
package pb;
option go_package = "src/infrastructure/grpc/pb";

message Blank{}

message CreateOrderRequest {
  string id = 1;
  float price = 2;
  float tax = 3;
}

message CreateOrderResponse {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

message OrderList {
  repeated CreateOrderResponse orders = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc ListOrder(Blank) returns (OrderList){}
}